hphp/test/zend/bad/ext/intl/tests/timezone_getCanonicalID_error.php
<?php
ini_set("intl.error_level", E_WARNING);

var_dump(IntlTimeZone::getCanonicalID());
var_dump(IntlTimeZone::getCanonicalID(array()));
var_dump(IntlTimeZone::getCanonicalID("foo\x81"));
var_dump(IntlTimeZone::getCanonicalID('foobar', null));

